# aevum

./: .env.example  .gitignore  CLAUDE.md  README.md  __main__.py  pyproject.toml
providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py
src/: __init__.py  agent.py  config.py  state.py
tools/: __init__.py  base.py  read_write.py  web_search.py
